基础课程全部完结

--- a/总结.md
+++ b/总结.md
@@ -8,8 +8,12 @@
 
 ## 三、复合类型
 
-![image-20201227202848067](https://raw.githubusercontent.com/nirvana0101/PicGo-Repository/master/image-20201227202848067.png)
+![image-20210104143752425](https://raw.githubusercontent.com/nirvana0101/PicGo-Repository/master/image-20210104143752425.png)
 
 1、指针类型的变量起名为pointer_b的形式。只看变量名直接知道这是一个指针变量，用来存类似于0xc000062090的地址；   
 
 <img src="https://raw.githubusercontent.com/nirvana0101/PicGo-Repository/master/image-20201227113034650.png?token=ALQPM2XFSBSADTSGATOLNVC75ACHM" alt="image-20201227113034650" style="zoom: 50%;" />
+
+## 四、文件读写
+
+1. 需要回看切片部分的内容。切片的实质时什么？为什么用make()创建行，用var却不行？
